<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignLeft="@+id/l1"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            android:layout_alignStart="@+id/l1">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/title_criptomoedas"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/l"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:layout_alignLeft="@+id/l1"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/textQtd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:text="@string/qtd_da_criptomeda" />

            <TextView
                android:id="@+id/textValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/valor_da_criptomoeda" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/l0"
            android:layout_centerHorizontal="true"

            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/textBtc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:text="@string/btc" />


            <EditText
                android:id="@+id/qtdBtc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:ems="7"
                android:inputType="numberDecimal|numberSigned" />

            <EditText
                android:id="@+id/valueBtc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:ems="7"
                android:inputType="numberDecimal|numberSigned" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/l2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/l1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/textEth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:text="@string/eth" />


            <EditText
                android:id="@+id/qtdEth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:ems="7"
                android:inputType="numberDecimal|numberSigned" />

            <EditText
                android:id="@+id/valueEth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:ems="7"
                android:inputType="numberDecimal|numberSigned" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/l3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/l2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/textXrp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:text="@string/xrp" />


            <EditText
                android:id="@+id/qtdXrp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:ems="7"
                android:inputType="numberDecimal|numberSigned" />

            <EditText
                android:id="@+id/valueXrp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:ems="7"
                android:inputType="numberDecimal|numberSigned" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/l4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignLeft="@+id/l1"
            android:layout_below="@+id/l3"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            android:layout_alignStart="@+id/l1">

            <Button
                android:id="@+id/calc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="25dp"
                android:onClick="calcular"
                android:text="@string/calcular_r" />

            <TextView
                android:id="@+id/textResp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="45dp"
                android:paddingRight="10dp"
                android:text="@string/aqui_aparece_o_valor_da_soma" />
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>